fixed post-time too long problem
当日期较长时显示会错乱

--- a/source/scss/_partial/archive-post-list.scss
+++ b/source/scss/_partial/archive-post-list.scss
@@ -10,7 +10,7 @@
     }
     .post-title-link {
         display: block;
-        margin-left: 110px;
+        margin-left: 130px;
         color: #42b983;
         word-break: break-all;
         &:hover {
@@ -20,7 +20,6 @@
     }
     .post-time {
         float: left;
-        width: 110px;
         color: #7f8c8d;
     }
 }
